Removed missing nightly badge from README.md, set default value for optional command line args to None, due to change in case-app